--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,7 @@
 
+server.port=8081
+
+
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.url=jdbc:postgresql://localhost:5432/tinkConnector
 spring.datasource.username=tinkConnector
