--- a/TinkConnectorBatchProcessor/build.gradle
+++ b/TinkConnectorBatchProcessor/build.gradle
@@ -14,5 +14,7 @@ repositories {
 
 dependencies {
     implementation project(':TinkAPI')
+    implementation 'com.hierynomus:sshj:0.30.0'
+
     testCompile group: 'junit', name: 'junit', version: '4.12'
 }
