basic models and entities

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,12 +1,8 @@
-
 server.port=8081
-
-
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.url=jdbc:postgresql://localhost:5432/tinkConnector
 spring.datasource.username=tinkConnector
 spring.datasource.password=tinkConnector
-
 # Hikari will use the above plus the following to setup connection pooling
 spring.datasource.hikari.minimumIdle=5
 spring.datasource.hikari.maximumPoolSize=20
@@ -14,3 +10,14 @@ spring.datasource.hikari.idleTimeout=30000
 spring.datasource.hikari.poolName=SpringBootJPAHikariCP
 spring.datasource.hikari.maxLifetime=2000000
 spring.datasource.hikari.connectionTimeout=30000
+# Staging environment
+cgd.baseUrl=http://cgdw808158494:8080/pceApi/rest/v1
+#cgd.baseUrl=http://localhost:8080/pceApi/rest/v1
+tink.baseUrl=https://main.staging.cardiff.tink.se/api/v1
+tink.clientId=0d0465fbe9c0461bb67ad7553afac259
+tink.clientSecret=c21103b802e0410198527d664cb80744
+tink.tls.main.clientCertificate.active=false
+tink.tls.main.clientcertificate.keystore=c://Users/RSA/Downloads/clientkeystore.jks
+tink.tls.main.clientcertificate.keystore.password=password
+tink.tls.main.clientcertificate.keystore.keypassword=password
+tink.tls.main.clientcertificate.keystore.alias=1
