--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,8 +16,8 @@ cgd.baseUrl=http://cgdw808158494:8080/pceApi/rest/v1
 tink.baseUrl=https://main.staging.cardiff.tink.se/api/v1
 tink.clientId=0d0465fbe9c0461bb67ad7553afac259
 tink.clientSecret=c21103b802e0410198527d664cb80744
-tink.tls.main.clientCertificate.active=false
-tink.tls.main.clientcertificate.keystore=c://Users/RSA/Downloads/clientkeystore.jks
-tink.tls.main.clientcertificate.keystore.password=password
-tink.tls.main.clientcertificate.keystore.keypassword=password
+tink.tls.main.clientCertificate.active=true
+tink.tls.main.clientcertificate.keystore=certificates/data/staging/generated/staging.main.mtls.cgd.tink.jks
+tink.tls.main.clientcertificate.keystore.password=changeit
+tink.tls.main.clientcertificate.keystore.keypassword=changeit
 tink.tls.main.clientcertificate.keystore.alias=1
