--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-server.port=8081
+server.port=8080
 spring.datasource.type=com.zaxxer.hikari.HikariDataSource
 spring.datasource.url=jdbc:postgresql://localhost:5432/tinkConnector
 spring.datasource.username=tinkConnector
@@ -11,7 +11,7 @@ spring.datasource.hikari.poolName=SpringBootJPAHikariCP
 spring.datasource.hikari.maxLifetime=2000000
 spring.datasource.hikari.connectionTimeout=30000
 # Staging environment
-cgd.baseUrl=http://cgdw808158494:8080/pceApi/rest/v1
+cgd.baseUrl=http://10.52.36.22:8080/pceApi/rest/v1
 #cgd.baseUrl=http://localhost:8080/pceApi/rest/v1
 tink.baseUrl=https://main.staging.cardiff.tink.se/api/v1
 tink.clientId=0d0465fbe9c0461bb67ad7553afac259
