--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,16 +16,17 @@ spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.Ph
 # Staging environment
 cgd.baseUrl=http://10.52.36.22:8080/pceApi/rest/v1
 #cgd.baseUrl=http://localhost:8080/pceApi/rest/v1
-tink.baseUrl=https://main.staging.cardiff.tink.se/api/v1
+tink.baseUrl=https://api.staging.cardiff.tink.com
 tink.clientId=0d0465fbe9c0461bb67ad7553afac259
 tink.clientSecret=c21103b802e0410198527d664cb80744
-tink.tls.main.clientCertificate.active=false
+tink.tls.main.clientCertificate.active=true
 tink.tls.main.clientcertificate.keystore=certificates/data/staging/generated/staging.main.mtls.cgd.tink.jks
 tink.tls.main.clientcertificate.keystore.password=changeit
 tink.tls.main.clientcertificate.keystore.keypassword=changeit
 tink.tls.main.clientcertificate.keystore.alias=1
-cgd.batchJob.sshHost=desynced.net
-cgd.batchJob.sshUsername=rsa
-cgd.batchJob.sshPassword=2fuckpprod
-cgd.batchJob.sshPath=batchFile.txt;
+cgd.batchJob.sshHost=lpc6001nas03
+cgd.batchJob.sshUsername=yp01194
+cgd.batchJob.sshPassword=%Cgd2020
+cgd.batchJob.sshPath=/stor/dabox/batchFile.txt;
 cgd.batchJob.workingDirectory=batchFile.txt;
+logging.level.org.apache.http=DEBUG
