--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -29,4 +29,5 @@ cgd.batchJob.sshUsername=yp01194
 cgd.batchJob.sshPassword=%Cgd2020
 cgd.batchJob.sshPath=/stor/dabox/batchFile.txt;
 cgd.batchJob.workingDirectory=batchFile.txt;
+cgd.invertTransactionsSignal=true
 #logging.level.org.apache.http=DEBUG
