--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,7 +11,7 @@ spring.datasource.hikari.poolName=SpringBootJPAHikariCP
 spring.datasource.hikari.maxLifetime=2000000
 spring.datasource.hikari.connectionTimeout=30000
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 # Staging environment
 cgd.baseUrl=http://10.52.36.22:8080/pceApi/rest/v1
@@ -27,7 +27,10 @@ tink.tls.main.clientcertificate.keystore.alias=1
 cgd.batchJob.sshHost=lpc6001nas03
 cgd.batchJob.sshUsername=yp01194
 cgd.batchJob.sshPassword=%Cgd2020
-cgd.batchJob.sshPath=/stor/dabox/batchFile.txt;
-cgd.batchJob.workingDirectory=batchFile.txt;
+cgd.batchJob.sshPath=/stor/dabox/CQ/RCP
+cgd.batchJob.filename=ZD4270O
+cgd.batchJob.workingDirectory=tmp/
 cgd.invertTransactionsSignal=true
 #logging.level.org.apache.http=DEBUG
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
