--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,23 +14,35 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 # Staging environment
-cgd.baseUrl=http://10.52.36.22:8080/pceApi/rest/v1
+cgd.baseUrl=https://app.grupocgd.com/pceApi/rest/v1
 #cgd.baseUrl=http://localhost:8080/pceApi/rest/v1
-tink.baseUrl=https://api.staging.cardiff.tink.com
-tink.clientId=0d0465fbe9c0461bb67ad7553afac259
-tink.clientSecret=c21103b802e0410198527d664cb80744
+#tink.baseUrl=https://api.staging.cardiff.tink.com
+tink.baseUrl=https://api.production.cardiff.tink.com
+#tink.clientId=0d0465fbe9c0461bb67ad7553afac259
+#tink.clientSecret=c21103b802e0410198527d664cb80744
+#tink.tls.main.clientCertificate.active=true
+#tink.tls.main.clientcertificate.keystore=certificates/data/staging/generated/staging.main.mtls.cgd.tink.jks
+#tink.tls.main.clientcertificate.keystore=certificates/data/production/generated/production.main.mtls.cgd.tink.jks
+#tink.tls.main.clientcertificate.keystore.password=changeit
+#tink.tls.main.clientcertificate.keystore.keypassword=changeit
+#tink.tls.main.clientcertificate.keystore.alias=1
+tink.clientId=7ea3edac26f644b99f93fc63f428b6d3
+tink.clientSecret=3f1c1ddee4f94347bb66577eea1b551b
 tink.tls.main.clientCertificate.active=true
-tink.tls.main.clientcertificate.keystore=certificates/data/staging/generated/staging.main.mtls.cgd.tink.jks
+#tink.tls.main.clientcertificate.keystore=certificates/main-cgd_tink.jks
+tink.tls.main.clientcertificate.keystore=certificates/data/production/generated/production.main.mtls.cgd.tink.jks
 tink.tls.main.clientcertificate.keystore.password=changeit
 tink.tls.main.clientcertificate.keystore.keypassword=changeit
 tink.tls.main.clientcertificate.keystore.alias=1
 cgd.batchJob.sshHost=lpc6001nas03
 cgd.batchJob.sshUsername=yp01194
 cgd.batchJob.sshPassword=%Cgd2020
-cgd.batchJob.sshPath=/stor/dabox/CQ/RCP
+#cgd.batchJob.sshPath=/stor/dabox/CQ/RCP
+cgd.batchJob.sshPath=/stor/dabox/PR/RCP
 cgd.batchJob.filename=ZD4270O
 cgd.batchJob.workingDirectory=tmp/
 cgd.invertTransactionsSignal=true
+cgd.activateUploadToTink=false
 #logging.level.org.apache.http=DEBUG
-spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.format_sql=true
+spring.jpa.show-sql=false
+spring.jpa.properties.hibernate.format_sql=false
