--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -43,6 +43,7 @@ cgd.batchJob.filename=ZD4270O
 cgd.batchJob.workingDirectory=tmp/
 cgd.invertTransactionsSignal=true
 cgd.activateUploadToTink=false
+cgd.disablePCESubscriptionCheck=true
 #logging.level.org.apache.http=DEBUG
 spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.format_sql=false
