--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -41,8 +41,7 @@ cgd.batchJob.sshPassword=%Cgd2020
 cgd.batchJob.sshPath=/stor/dabox/PR/RCP
 cgd.batchJob.filename=ZD4270O
 cgd.batchJob.workingDirectory=tmp/
-cgd.invertTransactionsSignal=true
-cgd.activateUploadToTink=true
+#cgd.invertTransactionsSignal=true
 cgd.disablePCESubscriptionCheck=true
 #logging.level.org.apache.http=DEBUG
 spring.jpa.show-sql=false
